; ModuleID = '/home/carl/AnghaBench/git/extr_refs.c_safe_create_reflog.c'
source_filename = "/home/carl/AnghaBench/git/extr_refs.c_safe_create_reflog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

@the_repository = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @safe_create_reflog(i8* %0, i32 %1, %struct.strbuf* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.strbuf*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.strbuf* %2, %struct.strbuf** %6, align 8
  %7 = load i32, i32* @the_repository, align 4
  %8 = call i32 @get_main_ref_store(i32 %7)
  %9 = load i8*, i8** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load %struct.strbuf*, %struct.strbuf** %6, align 8
  %12 = call i32 @refs_create_reflog(i32 %8, i8* %9, i32 %10, %struct.strbuf* %11)
  ret i32 %12
}

declare dso_local i32 @refs_create_reflog(i32, i8*, i32, %struct.strbuf*) #1

declare dso_local i32 @get_main_ref_store(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
